adding image debugging
Former-commit-id: bc961da85069620e6e6b442b6c053baf38c2bd92

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
     <!-- https://github.com/evanw/lightgl.js/ -->
     <script type="text/javascript" src="lib/lightgl.js"></script>
     
+    <script type="text/javascript" src="bitmap.js"></script>
     <script type="text/javascript" src="matrixviewer.js"></script>
 
 </body>
