--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
         
         </div>
     </div>
+    
+    <div class="row">
+        <div class="col-sm-12">
+            <p class="text-center">
+                <a href="?#" class="btn btn-default btn-lg" role="button">Variant Conjunctive Prob.</a>
+                <a href="?reads#" class="btn btn-default btn-lg" role="button">Read Depth</a>
+            </p>
+        </div>
+    </div>
 </div>
 
     <!-- load scripts down here -->
