--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
             </p>
         </div>
     </div>
+    <div class="row">
+        <div class="col-sm-offset-5 col-sm-7">
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" id="dodiagonal" /> Show diagonally?         
+                </label>
+            </div>
+        </div>
+    </div>
 </div>
 
     <!-- load scripts down here -->
