Some visual cleanup; adding indicator background (i dunno how the z-ordering works as defined, but it does...)
Former-commit-id: 67b534d3724959484b36bf3be8de24cf8f9a67d3

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
         
         canvas { 
-            margin: 0 auto;
+            margin: 0 auto 20px;
             border: 1px solid black;
             display: block;
         }
@@ -29,7 +29,7 @@
         }
         
         #img-container img {
-            display: block;
+            display: none;
             margin: 20px auto;
             border: 1px solid black;
         }
