adding colorbrewer-like implementation in preparation for 2D color ramp
Former-commit-id: 50b90f265d7945ac4762cf0c700ad1424ea4a533

--- a/index.html
+++ b/index.html
@@ -87,10 +87,17 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-offset-5 col-sm-7">
+        <div class="col-sm-offset-4 col-sm-2">
             <div class="checkbox">
                 <label>
                     <input type="checkbox" id="dodiagonal" /> Show diagonally?         
+                </label>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" id="usecolorbrewer" /> Use Colorbrewer?
                 </label>
             </div>
         </div>
@@ -111,6 +118,7 @@
     <script type="text/javascript" src="lib/lightgl.js"></script>
     
     <script type="text/javascript" src="bitmap.js"></script>
+    <script type="text/javascript" src="colorbrewer.js"></script>
     <script type="text/javascript" src="matrixviewer.js"></script>
 
 </body>
