--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <div class="col-sm-12">
             <p class="text-center">
                 <a href="?#" class="btn btn-default btn-lg" role="button">Variant Conjunctive Prob.</a>
+                <a href="?expected#" class="btn btn-default btn-lg" role="button">Diff from expected variance</a>
                 <a href="?reads#" class="btn btn-default btn-lg" role="button">Read Depth</a>
             </p>
         </div>
