--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="col-sm-6">
             <div class="checkbox">
                 <label>
-                    <input type="checkbox" id="usecolorbrewer" /> Use Colorbrewer?
+                    <input type="checkbox" id="usecolorbrewer" checked /> Use Colorbrewer?
                 </label>
             </div>
         </div>
