--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="col-sm-offset-4 col-sm-2">
             <div class="checkbox">
                 <label>
-                    <input type="checkbox" id="dodiagonal" /> Show diagonally?         
+                    <input type="checkbox" id="dodiagonal" checked /> Show diagonally?         
                 </label>
             </div>
         </div>
