Adding rendering options as uniforms (easier to compare).  Also added the ability to use isoluminant ramp.
Former-commit-id: 753530135fd03c951354f74041a0bfd46f045f5d

--- a/index.html
+++ b/index.html
@@ -103,6 +103,32 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-sm-offset-1 col-sm-2 checkbox">
+            <p>Bivariate display options:</p>
+        </div>
+        <div class="col-sm-2">
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" id="dodarkening" class="bivariateOpts" /> Darken (confidence)
+                </label>
+            </div>
+        </div>
+        <div class="col-sm-2">
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" id="useisoluminant" class="bivariateOpts"  checked /> Isoluminant ramp?
+                </label>
+            </div>
+        </div>
+        <div class="col-sm-5">
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" id="fixwhitecenter" class="bivariateOpts"  /> Fix center step to white?
+                </label>
+            </div>    
+        </div>
+    </div>
 </div>
 
     <!-- load scripts down here -->
