adding ability to bin the lightness (that conveys 'confidence', number of rds)
Former-commit-id: 061b6b71569c9bb5ec5cbe8246ad2fa868769aa7

--- a/index.html
+++ b/index.html
@@ -109,12 +109,19 @@
                 </label>
             </div>
         </div>
-        <div class="col-sm-5">
+        <div class="col-sm-2">
             <div class="checkbox">
                 <label>
                     <input type="checkbox" id="fixwhitecenter" class="bivariateOpts"  /> Fix center step to white?
                 </label>
             </div>    
+        </div>
+        <div class="col-sm-3">
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" id="dolightbinning" class="bivariateOpts" checked /> Do Confidence Binning?
+                </label>
+            </div>
         </div>
     </div>
 </div>
