adding the ability to turn off confidence dimming/darkening; fixed not passing the actual minValue to the shader (whew)
Former-commit-id: d87e1f043fd2cabfa2764a77341d01d415c417fe

--- a/index.html
+++ b/index.html
@@ -93,10 +93,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-offset-1 col-sm-2 checkbox">
-            <p>Bivariate display options:</p>
-        </div>
-        <div class="col-sm-2">
+        <div class="col-sm-offset-1 col-sm-2">
             <div class="checkbox">
                 <label>
                     <input type="checkbox" id="dodarkening" class="bivariateOpts" /> Darken (confidence)
@@ -106,7 +103,7 @@
         <div class="col-sm-2">
             <div class="checkbox">
                 <label>
-                    <input type="checkbox" id="useisoluminant" class="bivariateOpts"  checked /> Isoluminant ramp?
+                    <input type="checkbox" id="useisoluminant" class="bivariateOpts" /> Isoluminant ramp?
                 </label>
             </div>
         </div>
@@ -116,6 +113,13 @@
                     <input type="checkbox" id="fixwhitecenter" class="bivariateOpts"  /> Fix center step to white?
                 </label>
             </div>    
+        </div>
+        <div class="col-sm-2">
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" id="doconfidence" class="bivariateOpts" checked /> Do confidence?
+                </label>
+            </div>
         </div>
         <div class="col-sm-3">
             <div class="checkbox">
