updating a bunch of functionality, but there's a problem with onmousemove only registering clicks and not actual mouse movement... as a result, the super-zoom only updates whenever a click is made.
Former-commit-id: 59e85bd506fc3cbc58f622e99a515fc81b5a92fd

--- a/index.html
+++ b/index.html
@@ -81,15 +81,6 @@
     </div>
     
     <div class="row">
-        <div class="col-sm-12">
-            <p class="text-center">
-                <a href="?conj#" class="btn btn-default btn-lg" role="button">Variant Conjunctive Prob.</a>
-                <a href="?expected#" class="btn btn-default btn-lg" role="button">Diff from expected variance</a>
-                <a href="?reads#" class="btn btn-default btn-lg" role="button">Read Depth</a>
-            </p>
-        </div>
-    </div>
-    <div class="row">
         <div class="col-sm-offset-4 col-sm-2">
             <div class="checkbox">
                 <label>
@@ -100,7 +91,7 @@
         <div class="col-sm-6">
             <div class="checkbox">
                 <label>
-                    <input type="checkbox" id="usecolorbrewer" checked /> Use Colorbrewer?
+                    <input type="checkbox" id="usecolorbrewer" checked disabled/> Use Colorbrewer?
                 </label>
             </div>
         </div>
@@ -158,7 +149,7 @@
     <!-- https://github.com/evanw/lightgl.js/ -->
     <script type="text/javascript" src="lib/lightgl.js"></script>
     
-    <script type="text/javascript" src="bitmap.js"></script>
+    <!--<script type="text/javascript" src="bitmap.js"></script>-->
     <script type="text/javascript" src="colorbrewer.js"></script>
     <script type="text/javascript" src="matrixviewer.js"></script>
 
