adding a listener to the metrics drop-down, adding equation images.
Former-commit-id: d299a9de758dcdcffec79531d944a999d9acc8cf

--- a/index.html
+++ b/index.html
@@ -63,11 +63,13 @@
                     <option>alternative</option>
                 </select><br />
                 
-                <label for="metrics">Metrics:</label><br />
-                <select multiple id="metrics" class="form-control" style="height: 65px;">
+                <label for="metrics">Metrics:</label>
+                <select id="metrics" class="form-control" style="width: auto; display:inline-block;">
                     <option selected>conjProbDiff.dat</option>
                     <option>conjProbDiff-old.dat</option>
                 </select>
+                
+                <img src="img/conjProbDiff.dat.png" id="metriceq" />
             </div>
         </div>
     </div>
