--- a/index.html
+++ b/index.html
@@ -137,6 +137,40 @@
     </div>
 </div>
 
+<div id="faq" class="modal fade" tabIndex="-2" role="dialog" aria-labelledby="faqLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="faqLabel">How to Use MatrixViewer JS</h4>
+            </div>
+            <div class="modal-body">
+                <p>
+                    This project is a JavaScript implementation of viewing data encoded in a matrix around the matrix diagonal.  The current use case is to find co-occurrences in viral populations, which can indicate how viruses adapt to environmental pressures, such as the host organism's immune system.
+                </p><p>
+                    This current implementation is architected by <a href="http://cs.wisc.edu/~sarikaya" target="_blank">Alper Sarikaya</a> to test the practicality of WebGL as a visualization medium.  The project is version-controlled in a private repository.  The stable version of the visualization is available (temporarily) <a href="http://cs.wisc.edu/~sarikaya/static/cooccur" target="_new">here</a>, while an in-progress version is available <a href="http://cs.wisc.edu/~sarikaya/research/cooccur" target="_new">here</a>.
+                </p>
+                <p>&nbsp;</p>
+                
+                <h4>Interacting with the Data</h4>
+                <p>
+                    The data is displayed diagonally by default, with the <i>i</i>th position on the y-axis, and the <i>j</i>th position on the x-axis.  Hovering the mouse over a particular position brings up the encoded data in the 'super-zoom' at top-right, which shows the current coordinates and metric value(s).  Navigation through the dataset is possible by clicking on a new position in the overview at top.  Zooming into the data is possible by using the mousewheel.  Switching the metric will cause the visualization to ask for the data file (up to 15 seconds) and load it into the visualization (1 second).  Subsequent metric switches will be instantaneous.
+                </p>
+                <p>&nbsp;</p>
+                
+                <h4>Implementation Notes</h4>
+                <p>
+                    This implementation of Splatterplots has been tested in Google Chrome (v36) and Firefox (v32).  Client computers must support WebGL (GPU, drivers, browser, OS) and the <strong>OES_float_texture</strong> WebGL extension for correct rendering. Check WebGL support of your current configuration on <a href="http://renderingpipeline.com/webgl-extension-viewer/" target="_blank">RenderingPipeline</a>. Internet Explorer and Safari do not support WebGL due to security concerns.
+                </p>
+            </div>
+            <div class="modal-footer">
+                <p class="pull-left small" style="margin-top: 10px;">&copy; 2014 &mdash; <a href="http://graphics.cs.wisc.edu" target="_new">UW Graphics Group</a>, <a href="http://wisc.edu" target="_new">University of Wisconsin-Madison</a></p>
+                <button class="btn btn-success" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
     <!-- load scripts down here -->
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
