--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             
             </div>
             <svg id="legend" version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg"></svg>
+            <svg id="detail" version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg"></svg>
             <div id="chooser">
                 <label for="datafile">Dataset File: </label>
                 <select id="datafile" class="form-control" style="width: auto; display:inline-block;">
