adding mike's ratio metric; starting a pass on the conditional counts
Former-commit-id: 54822fd9e7f8ba7da541d2e6ce7c73c6f6403d22

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <select id="metrics" class="form-control" style="width: auto; display:inline-block;">
                     <option selected>conjProbDiff.dat</option>
                     <option>conjProbDiff-old.dat</option>
+                    <option>conjProbDiff-ratio.dat</option>
                 </select>
                 
                 <img src="img/conjProbDiff.dat.png" id="metriceq" />
