updating variant counts; need to do some housekeeping next.
Former-commit-id: f60640552d452b93c055a5e8d664931f96c7cc6b

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </nav>
 
 <div class="container-fluid">
-    <div class="row">
+    <div class="row" style="height: 900px;">
         <!-- canvas(es) will be added here -->
         <div class="col-sm-12" id="canvas-container">
             <div id="canvas-labels">
@@ -55,8 +55,8 @@
             <div id="super-zoom">
             
             </div>
-            <svg id="legend" version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg"></svg>
             <svg id="detail" version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg"></svg>
+            <svg id="legend" version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg"></svg>
             <div id="chooser">
                 <label for="datafile">Dataset File: </label>
                 <select id="datafile" class="form-control" style="width: auto; display:inline-block;">
