adding some more data; copying d3 (v. 3.4.13) locally since the remote website is down...
Former-commit-id: ef2300e34ca1bf37d6bac7f54e171b608cb45207

--- a/index.html
+++ b/index.html
@@ -204,7 +204,8 @@
 
     <!-- load scripts down here -->
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <!--<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>-->
+    <script src="lib/d3.min.js" charset="utf-8"></script>
     
     <!-- helps with parsing mousewheel events -->
     <script type="text/javascript" src="lib/jquery.mousewheel.js"></script>
