fixed processing binary files into json.. need to update to put it into a d3-like data format for the filtered data.
.htaccess: turn php error logging on


Former-commit-id: 4be8aab88f76c9e91a427a3fea21c1b6030d4f2c

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
                 </li>
                 <li>
                     <div class="btn-group navbar-btn" id="datasetChooser">
-                        <button type="button" class="btn btn-primary" id="currentDataset">SHFV</button>
+                        <button type="button" class="btn btn-primary" id="currentDataset">[loading...]</button>
                         <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                             <span class="caret"></span>
                             <span class="sr-only">Toggle Dropdown</span>
                         </button>
                         <ul class="dropdown-menu" role="menu" id="datasetOptions">
-                            <li><a href="#">SHFV</a></li>
-                            <li><a href="#">SHIV</a></li>
+                            <li><a href="#">[loading...]</a></li>
+                            <li><a href="#">[...]</a></li>
                         </ul>
                     </div>
                 </li>
