--- a/d3viewer.html
+++ b/d3viewer.html
@@ -64,6 +64,26 @@
             <svg id="d3canvas" version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg"></svg>
         </div>
     </div>
+    <div class="row">
+        <div class="col-sm-4">
+            <label for="threshold-depth">
+                Read Depth threshold: 
+            </label>
+            <input id="threshold-depth" type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="10" />
+        </div>
+        <div class="col-sm-4">
+            <label for="threshold-variants">
+                Variant % threshold: 
+            </label>
+            <input id="threshold-variants" type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="10" />
+        </div>
+        <div class="col-sm-4">
+            <label for="threshold-metric">
+                Co-occurrence metric threshold: 
+            </label>
+            <input id="threshold-metric" type="text" data-slider-min="0" data-slider-max="1" data-slider-step="0.02" data-slider-value="0.3" />
+        </div>
+    </div>
 </div>
 
 <div id="faq" class="modal fade" tabIndex="-2" role="dialog" aria-labelledby="faqLabel" aria-hidden="true">
