adding 'clue' tokens
Former-commit-id: 4de7ebd6c346b315c8f3ea3e14cc6d80c18a0045

--- a/d3viewer.html
+++ b/d3viewer.html
@@ -65,19 +65,19 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-4" id="depth-slider">
             <label for="threshold-depth">
                 Read Depth threshold: 
             </label>
             <input id="threshold-depth" type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="10" />
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4" id="variant-slider">
             <label for="threshold-variants">
                 Variant % threshold: 
             </label>
             <input id="threshold-variants" type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="10" />
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4" id="metric-slider">
             <label for="threshold-metric">
                 Co-occurrence metric threshold: 
             </label>
