adding pagination and tooltips for densely-packed data
Former-commit-id: be88ba42adb0bb3d0c732700a320349d1fd4d675

--- a/d3viewer.html
+++ b/d3viewer.html
@@ -137,6 +137,7 @@
     
     <!-- helps with parsing mousewheel events -->
     <script type="text/javascript" src="lib/jquery.mousewheel.js"></script>
+    <script type="text/javascript" src="lib/d3-tip.js"></script>
     
     <!-- boostrap -->
     <script type="text/javascript" src="lib/bootstrap.min.js"></script>
