--- a/d3viewer.html
+++ b/d3viewer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>MatrixViewer - UW Graphics Group</title>
+    <title>Co-Occurrence D3 Viewer - UW Graphics Group</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
