very minor interface changes, added loading indicator (think about webworkers or  slider histograms next?)
Former-commit-id: f21e20ab050fef8a2e3f3d4ec7a3acd54dd87eb6

--- a/d3viewer.html
+++ b/d3viewer.html
@@ -63,6 +63,9 @@
         <div class="col-sm-12">
             <svg id="d3canvas" version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg"></svg>
         </div>
+        <div id="d3loading">
+            <span id="status">Loading components...</span>
+        </div>
     </div>
     <div class="row" id="d3-sliders">
         <div class="col-sm-4" id="depth-slider">
