--- a/d3viewer.html
+++ b/d3viewer.html
@@ -68,7 +68,13 @@
         </div>
     </div>
     <div class="row" id="d3-sliders">
-        
+        <div class="col-sm-12">
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" id="dostats" /> Do Slider Histograms? (terrible slow-down for anything not H5N1)
+                </label>
+            </div>
+        </div>
     </div>
 </div>
 
