spatially clustering items that are close to one another in genomic space, fixed  labelling, connections to the genome axis
.. starting genome ordering


Former-commit-id: 4e00942047720803569730de31799756800e69b7

--- a/d3viewer.html
+++ b/d3viewer.html
@@ -68,12 +68,20 @@
         </div>
     </div>
     <div class="row" id="d3-sliders">
-        <div class="col-sm-12">
+        <div class="col-sm-6">
             <div class="checkbox">
                 <label>
                     <input type="checkbox" id="dostats" /> Do Slider Histograms? (terrible slow-down for anything not H5N1)
                 </label>
             </div>
+        </div>
+        <div class="col-sm-6">
+            <p style="margin: 10px 0;>
+                Sort summary: 
+                <a id="sortpos">by position</a>
+                <a id="sortmetric">by level of co-occurrence</a>
+                <a id="sortvariants">by number of variants</a>
+            </p>
         </div>
     </div>
 </div>
