--- a/d3viewer.html
+++ b/d3viewer.html
@@ -64,7 +64,7 @@
             <svg id="d3canvas" version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg"></svg>
         </div>
         <div id="d3loading">
-            <span id="status">Loading components...</span>
+            <div id="status">Loading components...</div>
         </div>
     </div>
     <div class="row" id="d3-sliders">
@@ -76,7 +76,7 @@
             </div>
         </div>
         <div class="col-sm-6">
-            <p style="margin: 10px 0;>
+            <p style="margin: 10px 0;">
                 Sort summary: 
                 <a id="sortpos">by position</a>
                 <a id="sortmetric">by level of co-occurrence</a>
