adding start of all h5 data
Former-commit-id: 63a4cd7f60f92f1fd8834ccc545cf5bf8eb6db0b

--- a/d3viewer.html
+++ b/d3viewer.html
@@ -11,6 +11,7 @@
     <!-- boostrap -->
     <link href="lib/bootstrap.min.css" rel="stylesheet" />
     <link href="lib/bootstrap-slider.css" rel="stylesheet" />
+    <link href="lib/bootstrap-submenu.css" rel="stylesheet" />
     
     <!-- local stylesheet -->
     <link rel="stylesheet" href="style.css" />
@@ -106,6 +107,7 @@
     <!-- boostrap -->
     <script type="text/javascript" src="lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/bootstrap-slider.js"></script>
+    <script type="text/javascript" src="lib/bootstrap-submenu.js"></script>
     
     <!-- adds ability to push/pop matrices, and adds matrix classes/functions -->
     <!-- https://github.com/evanw/lightgl.js/ -->
