--- a/d3viewer.html
+++ b/d3viewer.html
@@ -69,20 +69,66 @@
         </div>
     </div>
     <div class="row" id="d3-sliders">
-        <div class="col-sm-6">
+        <div class="col-sm-4">
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" id="dosynonymy" /> Merge synonymous reads into reference reads?
+                </label>
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" id="keepsynonpairs" disabled checked /> Show synonymous pairs?
+                </label>
+            </div>
+        </div>
+        <div class="col-sm-5">
+            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#custompair">
+                Look at specific read pair
+            </button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
             <div class="checkbox">
                 <label>
                     <input type="checkbox" id="dostats" /> Do Slider Histograms? (terrible slow-down for anything not H5N1)
                 </label>
             </div>
         </div>
-        <div class="col-sm-6">
-            <p style="margin: 10px 0;">
-                Sort summary: 
-                <a id="sortpos">by position</a>
-                <a id="sortmetric">by level of co-occurrence</a>
-                <a id="sortvariants">by number of variants</a>
-            </p>
+    </div>
+</div>
+
+<div class="modal fade" id="custompair" tabIndex="-1" role="dialog" aria-labelledby="custompairLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="custompairLabel">Choose specific read pair</h4>
+            </div>
+            <div class="modal-body">
+                <div class="alert alert-danger" role="alert" id="custompairFeedback" style="display: none;">
+                    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                    <span class="sr-only">Error:</span>
+                    No overlapping reads found for given positions.
+                </div>
+                <p>Please pick two positions to compare.  Keep in mind that the maximum window between pairs of positions is <code id="numWindow">##</code>.<p>
+                <form class="form-inline">
+                    <div class="form-group">
+                        <label class="sr-only" for="pickedPos1">Position 1</label>
+                        <input type="number" id="pickedPos1" required />
+                    </div>
+                    <div class="form-group">
+                        <label class="sr-only" for="pickedPos2">Position 2</label>
+                        <input type="number" id="pickedPos2" required />
+                    </div>
+                    <button type="submit" class="btn btn-primary" id="customPairSubmit">View Co-occurrence</button>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
         </div>
     </div>
 </div>
