--- a/d3viewer.html
+++ b/d3viewer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Co-Occurrence D3 Viewer - UW Graphics Group</title>
+    <title>CoocurViewer - UW Graphics Group</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,9 +27,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">
-                <img src="img/logo.png" class="img-responsive pull-left"> 
-                Co-Occurrence D3Viewer
+            <a class="navbar-brand" href="#">            
+                <img src="img/logo.png" class="img-responsive pull-left">
+                CooccurViewer
             </a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
@@ -69,21 +69,14 @@
         </div>
     </div>
     <div class="row" id="d3-sliders">
-        <div class="col-sm-4">
+        <div class="col-sm-9">
             <div class="checkbox">
                 <label>
-                    <input type="checkbox" id="dosynonymy" /> Merge synonymous reads into reference reads?
+                    <input type="checkbox" id="dosynonymy" /> Merge synonymous nucleotides into the wild-type?
                 </label>
             </div>
         </div>
         <div class="col-sm-3">
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox" id="keepsynonpairs" disabled checked /> Show synonymous pairs?
-                </label>
-            </div>
-        </div>
-        <div class="col-sm-5">
             <button type="button" class="btn btn-default" data-toggle="modal" data-target="#custompair">
                 Look at specific read pair
             </button>
@@ -91,13 +84,27 @@
     </div>
     <div class="row">
         <div class="col-sm-12">
+            &nbsp;
+        </div>
+    </div>
+    <!--
+    <div class="row">
+        <div class="col-sm-6">
             <div class="checkbox">
                 <label>
                     <input type="checkbox" id="dostats" /> Do Slider Histograms? (terrible slow-down for anything not H5N1)
                 </label>
             </div>
         </div>
+        <div class="col-sm-6">
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" id="keepsynonpairs" disabled /> Show synonymous pairs?
+                </label>
+            </div>
+        </div>
     </div>
+    -->
 </div>
 
 <div class="modal fade" id="custompair" tabIndex="-1" role="dialog" aria-labelledby="custompairLabel">
