found more language issues

--- a/d3viewer.html
+++ b/d3viewer.html
@@ -78,7 +78,7 @@
         </div>
         <div class="col-sm-3">
             <button type="button" class="btn btn-default" data-toggle="modal" data-target="#custompair">
-                Look at specific read pair
+                Look at specific nucleotide pair
             </button>
         </div>
     </div>
@@ -112,7 +112,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="custompairLabel">Choose specific read pair</h4>
+                <h4 class="modal-title" id="custompairLabel">Choose specific nucleotide pair</h4>
             </div>
             <div class="modal-body">
                 <div class="alert alert-danger" role="alert" id="custompairFeedback" style="display: none;">
